布置前台菜单

--- a/AnnZone-Console/src/index.html
+++ b/AnnZone-Console/src/index.html
@@ -4,14 +4,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Metronic | Dashboard
+			安浪个人工作站 | AnnZone
 		</title>
 		<base href="/">
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!--begin::Web font -->
-		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+		<script src="./assets/app/js/webfont.js"></script>
 		<script>
 			           WebFont.load({             google: {"families":["Poppins:300,400,500,600,700","Roboto:300,400,500,600,700"]},             active: function() {                 sessionStorage.fonts = true;             }           });         
 		</script>
@@ -27,7 +27,7 @@
 	<div class="m-page-loader m-page-loader--non-block" style="margin-left: -80px; margin-top: -20px;">
 		<div class="m-blockui">
 			<span>
-				Please wait...
+				正在打开...
 			</span>
 			<span>
 				<div class="m-loader m-loader--brand"></div>
